Assistant checkpoint: Fix getAccessToken function placement
Assistant generated file changes:
- templates/document_types.html: Move getAccessToken function to correct scope

---

User prompt:

document_types:668 Error filtering users: ReferenceError: getAccessToken is not defined
    at filterUsers (document_types:654:30)
    at HTMLButtonElement.onclick (document_types:280:94)

--- a/templates/document_types.html
+++ b/templates/document_types.html
@@ -160,6 +160,10 @@ function getAccessToken() {
 </div>
 
 <script>
+function getAccessToken() {
+    return "{{ session.get('access_token', '') }}";
+}
+
 setupFormValidation('addDocumentTypeForm', {
     'documentTypeName': [
         ValidationRules.required,
